--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -14,15 +14,17 @@ body {
 .title {
   background: #e3f4ff;
   font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin: 8px;
+  margin: 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
