--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -25,10 +25,13 @@ body {
 .button-container {
   background: #e3f4ff;
   padding: 8px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
