--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -6,6 +6,8 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +16,11 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+}
+
+.left-links {
+  display: flex;
+  
 }
 
 ul {
