Flex direction row for left and right links

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -18,9 +18,14 @@
   padding: 4px 32px;
 }
 
-.left-links {
+.left-links ul {
   display: flex;
-  
+  flex-direction: row;
+}
+
+.right-links ul {
+  display: flex;
+  flex-direction: row;
 }
 
 ul {
