--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  gap: 20px;
 }
 
 .logo {
@@ -16,6 +17,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px 0;
 }
 
 ul {
@@ -23,6 +25,7 @@ ul {
   list-style-type: none;
   display: flex;
   flex-direction: row;
+  gap: 20px;
 }
 
 a {
