Aligned the logo in the center across both axis

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -7,6 +7,7 @@
   background: papayawhip;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .logo {
@@ -30,3 +31,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
