Set gap between links on left and right

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -10,14 +10,14 @@
   align-items: center;
 }
 
-.left-links ul {
+.left-links ul { /* First to complete */
   display: flex;
-  flex-direction: row;
+  gap: 20px;
 }
 
 .right-links ul {
   display: flex;
-  flex-direction: row;
+  gap: 20px;
 }
 
 .logo {
