--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -6,8 +6,9 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -23,7 +24,9 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  gap: 20px;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
