Align parent container content to center along main axis

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -13,6 +13,7 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -28,6 +29,10 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+}
+
+.profile-image, .notifications { /* Align to right still */
+  border: black solid 5px;
 }
 
 button {
