Start back a few steps after flex main container

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  width: 100vw;
 }
 
 .header {
@@ -14,6 +15,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   align-items: center;
+  flex-direction: row;
 }
 
 .profile-image {
@@ -29,10 +31,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-}
-
-.profile-image, .notifications { /* Align to right still */
-  border: black solid 5px;
 }
 
 button {
