--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -15,6 +15,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 8px;
 }
 
@@ -53,5 +54,15 @@ ul {
 
 .links {
   display: flex;
+  gap: 16px;
+}
+
+.left-side {
+  display: flex;
+}
+
+.right-side {
+  display: flex;
+  align-items: center;
   gap: 16px;
 }
