Look at changing what elements to use for containers

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,8 +10,13 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  justify-self: center;
+  margin-bottom: 32px;
+}
+
+.fruits {
   display: flex;
-  justify-content: center;
+  gap: 52px;
 }
 
 /* do not edit this footer */
