title div within a div aligned to the center

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
 }
 
 img {
@@ -10,13 +11,13 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  justify-self: center;
   margin-bottom: 32px;
+  display: flex;
+  justify-content: center;
 }
 
 .fruits {
   display: flex;
-  gap: 52px;
 }
 
 /* do not edit this footer */
