Align text on entire body to center

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 
 }
 
@@ -18,12 +19,8 @@ img {
 
 .fruits {
   display: flex;
+  align-content: space-between;
   gap: 52px;
-}
-
-.fruity {
-  width: 200px;
-  text-align: center;
 }
 
 
