Only split off top and bottom section

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -35,6 +35,10 @@ body {
   justify-content: center;
 }
 
+.words {
+  display: fle
+}
+
 .close-button {
   background: #eee;
   border-radius: 50%;
