--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -24,6 +24,11 @@ body {
   flex-direction: column;
 }
 
+.top {
+  display: flex;
+  justify-content: space-between;
+}
+
 .icon {
   color: royalblue;
   font-size: 26px;
