--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -28,6 +28,11 @@ body {
   display: flex;
 }
 
+.words {
+  display: flex;
+  flex-direction: column;
+}
+
 .icon {
   color: royalblue;
   font-size: 26px;
