--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,6 +22,7 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
 
 .top {
@@ -31,6 +32,7 @@ body {
 .words {
   display: flex;
   flex-direction: column;
+  margin-left: 10px;
 }
 
 .icon {
