--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -35,6 +35,10 @@ body {
   margin-left: 10px;
 }
 
+.header {
+  margin: 10px 0;
+}
+
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -80,4 +84,8 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.bottom {
+  margin-top: 10px;
 }
