--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
 }
 
 img {
@@ -58,15 +61,16 @@ ul li a {
 
 .footer {
   background-color: #eeeeee;
+  align-items: flex-end;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .buttons {
   padding: 10px;
+  display: flex;
 }
